[tool.poetry]
name = "02"
version = "0.1.0"
description = ""
authors = ["qvntz <asdawd2004@mail.ru >"]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
